@@ -20,9 +20,9 @@
 email: bartj@hum.ku.dk
 */
 
-#define DATUM "29 March 2025"
-#define VERSION "6.28.3"
-#define BUILD "315"
+#define DATUM "4 April 2025"
+#define VERSION "6.29.0"
+#define BUILD "316"
 /*
 COMPILATION
 -----------
