@@ -171,6 +171,10 @@ char stringmatch
     int ci;
     psk name = NULL;
     assert(sizeof(s) == 4);
+#if SHOWWHETHERNEVERVISISTED
+    if(is_op(pat))
+        pat->v.fl |= VISITED;
+#endif
     if(!cutoff)
         cutoff = sub + stringLength;
 #if CUTOFFSUGGEST
